grunt-contrib-less

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,8 @@
 @font-family-base: 'Open Sans', Arial, Helvetica, sans-serif;
 @font-size-base: 14px;
+@line-height-base: 24px;
+@text-color: #283645;
+@body-bg: #fff;
 
-@link-color: #d22856;
-@link-hover-color: #1d2631;
+@link-color: #fff;
+@link-hover-color: #d22856;
