--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,10 @@
+@import 'vendors/normalize.less';
 @import 'variables.less';
 
-@import 'components/scaffolding.less';
-@import 'components/type.less';
-@import 'components/page-header.less';
-@import 'components/page-footer.less';
+
+@import 'base/scaffolding.less';
+@import 'base/type.less';
+
+
+@import 'blocks/page-header.less';
+@import 'blocks/page-footer.less';
