less files added

--- a/css/style.css
+++ b/css/style.css
@@ -177,14 +177,14 @@ th {
   padding: 0;
 }
 body {
-  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71428571;
   color: #283645;
   background-color: #ffffff;
 }
 a {
-  color: #ffffff;
+  color: #337ab7;
   text-decoration: none;
 }
 a:hover,
