--- a/less/style.less
+++ b/less/style.less
@@ -1,10 +1,24 @@
+// Reset 
 @import 'vendors/normalize.less';
+
+// Variables and mixins
 @import 'variables.less';
+@import "mixins.less";
 
-
+// CSS
 @import 'base/scaffolding.less';
 @import 'base/type.less';
+@import "base/layout.less";
+@import "base/grid.less";
 
-
+// Blocks
 @import 'blocks/page-header.less';
 @import 'blocks/page-footer.less';
+@import 'blocks/logo.less';
+@import 'blocks/btn.less';
+@import 'blocks/intro.less';
+@import 'blocks/box.less';
+@import 'blocks/slider.less';
+@import 'blocks/price-table.less';
+@import 'blocks/features.less';
+@import 'blocks/reviews.less';
