--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,40 @@
-@font-family-base: 'Open Sans', Arial, Helvetica, sans-serif;
-@font-size-base: 14px;
-@line-height-base: 24px;
-@text-color: #283645;
-@body-bg: #fff;
+// Scaffolding
 
-@link-color: #fff;
+@body-bg: #fff;
+@text-color: #283645;
+
+@link-color: #337ab7;
 @link-hover-color: #d22856;
+@link-hover-decoration: underline;
+
+
+
+// Typography
+
+@font-family-sans-serif: 'Open Sans', Helvetica, Arial, sans-serif;
+@font-family-serif: Georgia, "Times New Roman", Times, serif;
+@font-family-base: @font-family-sans-serif;
+
+
+@font-size-base: 14px;
+@font-size-large: ceil((@font-size-base * 1.25)); // ~18px
+@font-size-small: ceil((@font-size-base * 0.85)); // ~12px
+
+
+@font-size-h1: floor((@font-size-base * 2.6)); // ~36px
+@font-size-h2: floor((@font-size-base * 2.15)); // ~30px
+@font-size-h3: ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h4: ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h5: @font-size-base;
+@font-size-h6: ceil((@font-size-base * 0.85)); // ~12px
+
+
+@line-height-base: 1.714285714;
+
+@headings-color: #000;
+
+
+
+// Buttons
+
+@btn-font-weight: bold;
