--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,6 +1,16 @@
 .btn {
-	color: @link-color;
+	display: inline-block;
+	padding: 12px 15px;
+	margin-bottom: 17px;
+	color: #fff;
 	background: transparent;
-	padding: 5px 10px;
-	border-radius: 20px;
+	border: 3px solid #fff;
+	border-radius: 30px;
+	text-align: center;
+
+	&:hover,
+	&:focus {
+		background: #fff;
+		color: @base-color;
+	}
 }
