--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -1,5 +1,5 @@
 .intro {
-	background: @base-color url(/img/bg__intro.png) 50% 0 no-repeat;
+	background: @base-color url(../img/bg__intro.png) 50% 0 no-repeat;
 }
 .intro__container {
 	text-align: center;
