--- a/css/style.css
+++ b/css/style.css
@@ -192,15 +192,17 @@ a:focus {
   color: #d22856;
   text-decoration: underline;
 }
-.page-caption {
-  font-size: 24px;
+.page-header {
+  background: rgba(0, 0, 0, 0.5);
 }
 .page-header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+}
+.page-caption {
+  font-size: 24px;
 }
 .logo {
   float: left;
@@ -222,7 +224,7 @@ a:focus {
   color: #1d2631;
 }
 .intro {
-  background: #1d2631 url(/img/bg__intro.png) 50% 0 no-repeat;
+  background: #1d2631 url(../img/bg__intro.png) 50% 0 no-repeat;
 }
 .intro__container {
   text-align: center;
