--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,7 +1,13 @@
 .page-header {
+	.bg(#000,50%)
+}
+.page-header {
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
-	background: rgba(0, 0, 0, .5);
+}
+
+.page-caption {
+	font-size: @fz-page-caption;
 }
