--- a/less/base/scaffolding.less
+++ b/less/base/scaffolding.less
@@ -1,7 +1,7 @@
 body {
-  font-family: @font-family-base;
-  font-size: @font-size-base;
-  line-height: @line-height-base;
+  font-family: @ff-base;
+  font-size: @fz-base;
+  line-height: @lh-base;
   color: @text-color;
   background-color: @body-bg;
 }
