--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -1,29 +1,36 @@
 .intro {
 	background: @base-color url(../img/bg__intro.png) 50% 0 no-repeat;
-}
-.intro__container {
-	text-align: center;
-}
-.intro__caption {
-	margin: 0;
-	padding: 83px 0 336px;
-	font-size: @font-size-h3;
-	color: #fff;
-}
-.intro__desc {
-	background: @base-color;
-	padding: 26px 22px;
 
-	p {
+
+	&__container {
+		text-align: center;
+	}
+
+
+	&__caption {
+		margin: 0;
+		padding: 83px 0 336px;
+		font-size: @fz-h3;
 		color: #fff;
 	}
-}
-.intro__apps-list {
-	padding: 0;
 
-	li {
-		display: inline-block;
-		margin: 0 16px;
+
+	&__desc {
+		background: @base-color;
+		padding: 26px 22px;
+
+		p {
+			color: #fff;
+		}
 	}
 
+
+	&__apps-list {
+		padding: 0;
+
+		li {
+			display: inline-block;
+			margin: 0 16px;
+		}
+	}
 }
