--- a/less/variables.less
+++ b/less/variables.less
@@ -8,31 +8,33 @@
 
 @base-color: #1d2631;
 
+// Colors
+@c_white: #fff;
 
 // Typography
 
-@font-family-sans-serif: 'Open Sans', Helvetica, Arial, sans-serif;
-@font-family-base: @font-family-sans-serif;
+@ff-sans-serif: 'Open Sans', Helvetica, Arial, sans-serif;
+@ff-base: @ff-sans-serif;
 
 
-@font-size-base: 14px;
-@font-size-large: ceil((@font-size-base * 1.25)); // ~18px
-@font-size-small: ceil((@font-size-base * 0.85)); // ~12px
+@fz-base: 14px;
+@fz-large: ceil((@fz-base * 1.25)); // ~18px
+@fz-small: ceil((@fz-base * 0.85)); // ~12px
 
 
-@font-size-h1: floor((@font-size-base * 2.6)); // ~36px
-@font-size-h2: floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3: ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4: ceil((@font-size-base * 1.25)); // ~18px
-@font-size-h5: @font-size-base;
-@font-size-h6: ceil((@font-size-base * 0.85)); // ~12px
+@fz-h1: floor((@fz-base * 2.6)); // ~36px
+@fz-h2: floor((@fz-base * 2.15)); // ~30px
+@fz-h3: ceil((@fz-base * 1.7)); // ~24px
+@fz-h4: ceil((@fz-base * 1.25)); // ~18px
+@fz-h5: @fz-base;
+@fz-h6: ceil((@fz-base * 0.85)); // ~12px
 
 
-@line-height-base: 1.714285714;
+@lh-base: 1.714285714;
 
 @headings-color: #000;
 
-@font-size-page-caption: ceil((@font-size-base * 1.7));
+@fz-page-caption: ceil((@fz-base * 1.7));
 
 
 // Buttons
