--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,10 @@
+@screen-md: 768px;
+@screen-lg: 1200px;
+
 // Scaffolding
 
 @body-bg: #fff;
+@table-bg: transparent;
 @text-color: #283645;
 
 @link-color: #337ab7;
@@ -10,6 +14,8 @@
 
 // Colors
 @c_white: #fff;
+@c_pink: #d22856;
+@c_grey: #f2f2f2;
 
 // Typography
 
@@ -31,6 +37,7 @@
 
 
 @lh-base: 1.714285714;
+@lh-caption: 1.125;
 
 @headings-color: #000;
 
@@ -39,4 +46,5 @@
 
 // Buttons
 
-@btn-font-weight: bold;
+@caption-font-weight: 300;
+@btn-font-weight: 700;
