--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,17 @@ td,
 th {
   padding: 0;
 }
+.clearfix:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.clearlist,
+.intro__apps-list,
+.features {
+  list-style: none;
+  padding-left: 0;
+}
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 14px;
@@ -192,8 +203,8 @@ a:focus {
   color: #d22856;
   text-decoration: underline;
 }
-.page-header {
-  background: rgba(0, 0, 0, 0.5);
+table {
+  background-color: transparent;
 }
 .page-header {
   position: fixed;
@@ -201,8 +212,77 @@ a:focus {
   left: 0;
   right: 0;
 }
+.page-header__nav-wrap {
+  width: 50%;
+  float: right;
+  text-align: right;
+}
+@media (min-width: 760px) {
+  .page-header__nav-wrap {
+    width: 75%;
+  }
+}
+.logo {
+  width: 50%;
+}
+@media (min-width: 760px) {
+  .logo {
+    width: 25%;
+  }
+}
+.page-footer__contacts {
+  width: 100%;
+}
+.page-footer__map {
+  width: 100%;
+}
+.page-footer__list {
+  width: 100%;
+}
+@media (min-width: 760px) {
+  .page-footer__list {
+    width: 41.66666667%;
+  }
+}
+.page-header {
+  background: rgba(0, 0, 0, 0.5);
+}
+.page-header__container {
+  padding: 8px 20px;
+}
+.page-header__container:after {
+  content: '';
+  display: table;
+  clear: both;
+}
 .page-caption {
+  padding-bottom: 32px;
   font-size: 24px;
+  font-weight: 300;
+  line-height: 1.125;
+  text-align: center;
+}
+.page-footer__map {
+  overflow: hidden;
+}
+.page-footer__contacts {
+  text-align: center;
+}
+.page-footer__list {
+  display: inline-block;
+  text-align: center;
+}
+.page-footer__list dt {
+  font-weight: 700;
+  font-size: 18px;
+}
+.page-footer__list dd {
+  margin-left: 0;
+  padding-bottom: 21px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 1.125;
+  color: #d22856;
 }
 .logo {
   float: left;
@@ -210,9 +290,11 @@ a:focus {
 }
 .btn {
   display: inline-block;
-  padding: 12px 15px;
+  padding: 10px 25px;
   margin-bottom: 17px;
-  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  color: #ffffff;
   background: transparent;
   border: 3px solid #fff;
   border-radius: 30px;
@@ -222,30 +304,47 @@ a:focus {
 .btn:focus {
   background: #fff;
   color: #1d2631;
+  text-decoration: none;
 }
 .intro {
   background: #1d2631 url(../img/bg__intro.png) 50% 0 no-repeat;
 }
 .intro__container {
+  position: relative;
+  padding-top: 456px;
   text-align: center;
 }
 .intro__caption {
+  position: absolute;
+  width: 90%;
+  top: 85px;
   margin: 0;
-  padding: 83px 0 336px;
+  padding: 0 5%;
   font-size: 24px;
-  color: #fff;
+  line-height: 1.125;
+  font-weight: 300;
+  color: #ffffff;
 }
 .intro__desc {
   background: #1d2631;
-  padding: 26px 22px;
+  padding: 26px 5% 18px;
 }
 .intro__desc p {
   color: #fff;
 }
-.intro__apps-list {
-  padding: 0;
-}
 .intro__apps-list li {
   display: inline-block;
   margin: 0 16px;
+}
+.box {
+  padding: 25px 5%;
+}
+.box--shear {
+  background: #f2f2f2;
+}
+.features__item {
+  display: block;
+}
+.features__caption {
+  font-size: 18px;
 }
