--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,16 +1,19 @@
 .btn {
-	display: inline-block;
-	padding: 12px 15px;
-	margin-bottom: 17px;
-	color: #fff;
-	background: transparent;
-	border: 3px solid #fff;
-	border-radius: 30px;
-	text-align: center;
+  display: inline-block;
+  padding: 10px 25px;
+  margin-bottom: 17px;
+  font-size: @fz-large;
+  font-weight: @btn-font-weight;
+  color: @c_white;
+  background: transparent;
+  border: 3px solid #fff;
+  border-radius: 30px;
+  text-align: center;
 
-	&:hover,
-	&:focus {
-		background: #fff;
-		color: @base-color;
-	}
+  &:hover,
+  &:focus {
+    background: #fff;
+    color: @base-color;
+    text-decoration: none;
+  }
 }
