--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,13 +1,17 @@
 .page-header {
-	.bg(#000,50%)
-}
-.page-header {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
+  .bg(#000,50%);
+
+
+  &__container {
+    .clearfix();
+    padding: 8px 20px;
+  }
 }
 
 .page-caption {
-	font-size: @fz-page-caption;
+  padding-bottom: 32px;
+  font-size: @fz-page-caption;
+  font-weight: @caption-font-weight;
+  line-height: @lh-caption;
+  text-align: center;
 }
