--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,7 +1,5 @@
 
-.page-footer__map {
-  overflow: hidden;
-}
+
 
 .page-footer__contacts {
   text-align: center;
@@ -22,4 +20,8 @@
     line-height: @lh-caption;
     color: @c_pink;
   }
+}
+
+.page-footer__map {
+  background: @c_grey: url(img/map.png) 50% 0 no-repeat;
 }
