--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -23,5 +23,6 @@
 }
 
 .page-footer__map {
-  background: @c_grey: url(img/map.png) 50% 0 no-repeat;
+  height: 430px;
+  background: @c_grey url(img/map.png) 50% 0 no-repeat;
 }
