--- a/css/style.css
+++ b/css/style.css
@@ -262,9 +262,6 @@ table {
   line-height: 1.125;
   text-align: center;
 }
-.page-footer__map {
-  overflow: hidden;
-}
 .page-footer__contacts {
   text-align: center;
 }
@@ -283,6 +280,10 @@ table {
   font-size: 24px;
   line-height: 1.125;
   color: #d22856;
+}
+.page-footer__map {
+  height: 430px;
+  background: #f2f2f2 url(img/map.png) 50% 0 no-repeat;
 }
 .logo {
   float: left;
