--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -24,5 +24,5 @@
 
 .page-footer__map {
   height: 430px;
-  background: @c_grey url(img/map.png) 50% 0 no-repeat;
+  background: @c_grey url(../img/map.png) 50% 0 no-repeat;
 }
