--- a/less/base/scaffolding.less
+++ b/less/base/scaffolding.less
@@ -17,6 +17,10 @@ a {
     color: @link-hover-color;
     text-decoration: underline;
   }
+
+  &:visited {
+    text-decoration: none;
+  }
 }
 
 table {
