--- a/less/mixins.less
+++ b/less/mixins.less
@@ -29,6 +29,13 @@
 
 
 // Color
+.color (@color) {
+  color: @color;
+}
+.color (@color, @opacity: 30%) {
+  color: fadeout(@color, @opacity);
+}
+
 .bg (@color) {
 	background: @color;
 }
@@ -36,24 +43,3 @@
 	background: fadeout(@color, @opacity);
 }
 
-
-// Grid
-.generate-width(@n: 1, @size: xs, @i: 12) {
-
-  & when ( @size = xs ) {
-    width: (@n * 100% / @i);
-  }
-
-  & when ( @size = md ) {
-    @media (min-width: 760px) {
-      width: (@n * 100% / @i);
-    }
-  }
-
-  & when ( @size = lg ) {
-    @media (min-width: 1200px) {
-      width: (@n * 100% / @i);
-    }
-  }
-
-}
