--- a/less/variables.less
+++ b/less/variables.less
@@ -1,21 +1,26 @@
-@screen-md: 768px;
+@screen-md: 700px;
 @screen-lg: 1200px;
+@screen-lg2: 1450px;
+
+
+// Colors
+@dark-blue: #283645;
+@white: #fff;
+@pink: #d22856;
+@grey: #f2f2f2;
+
 
 // Scaffolding
 
-@body-bg: #fff;
+@body-bg: @white;
 @table-bg: transparent;
-@text-color: #283645;
+@text-color: @dark-blue;
 
-@link-color: #337ab7;
-@link-hover-color: #d22856;
+@link-color: @pink;
+@link-hover-color: @base-color;
 
-@base-color: #1d2631;
+@base-color: @dark-blue;
 
-// Colors
-@c_white: #fff;
-@c_pink: #d22856;
-@c_grey: #f2f2f2;
 
 // Typography
 
