--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -1,7 +1,40 @@
 .box {
-  padding: 25px 5%;
+  position: relative;
+  // padding: 25px 5% 50px;
 
   &--shear {
-    background: @c_grey;
+    background: @grey;
+  }
+
+  &--angle:after {
+    content: '';
+    position: absolute;
+    bottom: -35px;
+    height: 167px;
+    width: 100%;
+    background: url(../img/box--angle.png) 50% 0 no-repeat;
+    background-size: cover;
+    z-index: 0;
+  // content: '';
+  // position: absolute;
+  // bottom: -61px;
+  // height: 50px;
+  // width: 90%;
+  // background-image: linear-gradient(125deg, transparent 25%, #ffffff 25%), linear-gradient(225deg, transparent 25%, #ffffff 25%);
+  // background-size: 115px 115px;
+  // background-repeat: no-repeat;
+  // background-color: red;
+  }
+
+  &__container {
+    padding: 25px;
+  }
+}
+
+@media (min-width: @screen-md) {
+  .box {
+    &--angle:after {
+      bottom: -60px;
+    }
   }
 }
