--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -18,7 +18,7 @@
 		font-size: @fz-h3;
 		line-height: @lh-caption;
 		font-weight: @caption-font-weight;
-		color: @c_white;
+		color: @white;
 	}
 
 
