--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -3,7 +3,7 @@
   padding: 10px 25px;
   margin-bottom: 17px;
   font-size: @fz-large;
-  font-weight: @btn-font-weight;
+  font-weight: @fw-bold;
   color: @white;
   background: transparent;
   border: 3px solid #fff;
@@ -16,7 +16,8 @@
     background: transparent;
     text-decoration: none;
   }
-  &:hover{
+  &:hover,
+  &:focus{
     background: @white;
     color: @pink;
     text-decoration: none;
