--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -3,7 +3,7 @@
 .page-footer__caption {
   padding-bottom: 10px;
   font-size: @fz-page-caption;
-  font-weight: @caption-font-weight;
+  font-weight: @fw-light;
   line-height: @lh-caption;
 }
 .page-footer__contacts {
@@ -22,7 +22,7 @@
   }
   dd {
     margin-left: 0;
-    font-weight: @caption-font-weight;
+    font-weight: @fw-light;
     font-size: @fz-h3;
     line-height: @lh-caption;
     color: @pink;
