--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -11,7 +11,7 @@
 .page-caption {
     padding: 17px 5%;
   font-size: @fz-page-caption;
-  font-weight: @caption-font-weight;
+  font-weight: @fw-light;
   line-height: @lh-caption;
   text-align: center;
 }
