--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 @screen-md: 700px;
 @screen-lg: 1200px;
-@screen-lg2: 1450px;
+
 
 
 // Colors
@@ -49,7 +49,7 @@
 @fz-page-caption: ceil((@fz-base * 1.7));
 
 
-// Buttons
 
-@caption-font-weight: 300;
-@btn-font-weight: 700;
+@fw-light: 300;
+@fw-normal:400;
+@fw-bold: 700;
