--- a/less/base/layout.less
+++ b/less/base/layout.less
@@ -16,32 +16,36 @@
       width: (@n * 100% / @i);
     }
   }
-
-  & when ( @size = lg2 ) {
-    @media (min-width: @screen-lg2) {
-      width: (@n * 100% / @i);
-    }
-  }
 }
 
 
 
 .page-wrap {
-  
+  display: table;
+  width: 100%;
+  height: 100%;
 }
 .page-header {
+  //display: table-row;
+  //height: 1px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
+}
+.page-footer {
+  display:table-row;
+  height: 1px;
+}
 
-  &__nav-wrap {
-    .generate-width(6, xs, 12);
-    .generate-width(9, md, 12);
-    
-    float: right;
-    text-align: right;
-  }
+
+.page-header__nav-wrap {
+  .generate-width(6, xs, 12);
+  .generate-width(9, md, 12);
+  
+  float: right;
+  text-align: right;
 }
 
 .logo {
@@ -50,23 +54,24 @@
 }
 
 
-.page-main {
 
+features {
+  .generate-width(6, md, 12);
 }
 
 
-.page-footer {
-  &__contacts {
-    .generate-width(12, xs, 12);
-  }
 
-  &__map {
-    .generate-width(12, xs, 12);
-  }
-
-  &__list {
-    .generate-width(12, xs, 12);
-    .generate-width(5, md, 12);
-  }
+.page-footer__contacts {
+  .generate-width(12, xs, 12);
 }
+
+.page-footer__map {
+  .generate-width(12, xs, 12);
+}
+
+.page-footer__list {
+  .generate-width(12, xs, 12);
+  .generate-width(5, md, 12);
+}
+
 
