--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -17,7 +17,7 @@
 		padding: 0 5%;
 		font-size: @fz-h3;
 		line-height: @lh-caption;
-		font-weight: @caption-font-weight;
+		font-weight: @fw-light;
 		color: @white;
 	}
 
