--- a/less/variables.less
+++ b/less/variables.less
@@ -20,7 +20,7 @@
 @link-hover-color: @base-color;
 
 @base-color: @dark-blue;
-
+@headings-color: @dark-blue;
 
 // Typography
 
@@ -40,13 +40,10 @@
 @fz-h5: @fz-base;
 @fz-h6: ceil((@fz-base * 0.85)); // ~12px
 
+@fz-page-caption: ceil((@fz-base * 1.7));
 
 @lh-base: 1.714285714;
 @lh-caption: 1.125;
-
-@headings-color: #000;
-
-@fz-page-caption: ceil((@fz-base * 1.7));
 
 
 
