--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,13 @@ th {
   list-style: none;
   padding-left: 0;
 }
+* {
+  box-sizing: border-box;
+}
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 html,
 body {
   height: 100%;
@@ -198,6 +205,17 @@ body {
   line-height: 1.71428571;
   color: #283645;
   background-color: #ffffff;
+}
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+img {
+  vertical-align: middle;
 }
 a {
   color: #d22856;
@@ -222,6 +240,35 @@ table {
 table td {
   border: 2px solid #f2f2f2;
   padding: 5px 10px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  line-height: 1.125;
+  color: #283645;
+}
+h1 {
+  font-size: 36px;
+}
+h2 {
+  font-size: 30px;
+}
+h3 {
+  font-size: 24px;
+}
+h4 {
+  font-size: 18px;
+}
+h5 {
+  font-size: 14px;
+}
+h6 {
+  font-size: 12px;
 }
 .page-wrap {
   display: table;
@@ -280,7 +327,7 @@ table td {
   background: rgba(0, 0, 0, 0.5);
 }
 .page-header__container {
-  padding: 8px 20px;
+  padding: 10px 20px 16px;
 }
 .page-header__container:after {
   content: '';
@@ -288,7 +335,7 @@ table td {
   clear: both;
 }
 .page-caption {
-  padding: 17px 5%;
+  padding: 17px 0;
   font-size: 24px;
   font-weight: 300;
   line-height: 1.125;
@@ -340,7 +387,8 @@ table td {
 }
 .btn {
   display: inline-block;
-  padding: 10px 25px;
+  min-width: 281px;
+  padding: 8px 25px 11px;
   margin-bottom: 17px;
   font-size: 18px;
   font-weight: 700;
@@ -371,7 +419,7 @@ table td {
 }
 .intro__container {
   position: relative;
-  padding-top: 456px;
+  padding-top: 458px;
   text-align: center;
 }
 .intro__caption {
@@ -379,9 +427,9 @@ table td {
   width: 90%;
   top: 85px;
   margin: 0;
-  padding: 0 5%;
+  padding: 0;
   font-size: 24px;
-  line-height: 1.125;
+  line-height: 29px;
   font-weight: 300;
   color: #ffffff;
 }
