--- a/less/base/scaffolding.less
+++ b/less/base/scaffolding.less
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html,
 body {
   height: 100%;
@@ -9,6 +17,18 @@ body {
   line-height: @lh-base;
   color: @text-color;
   background-color: @body-bg;
+}
+
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+img {
+  vertical-align: middle;
 }
 
 
