--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,6 +1,7 @@
 .btn {
   display: inline-block;
-  padding: 10px 25px;
+  min-width: 281px;
+  padding: 8px 25px 11px;
   margin-bottom: 17px;
   font-size: @fz-large;
   font-weight: @fw-bold;
