--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -4,7 +4,7 @@
 
 	&__container {
 		position: relative;
-		padding-top: 456px;
+		padding-top: 458px;
 		text-align: center;
 	}
 
@@ -14,9 +14,9 @@
 		width: 90%;
 		top: 85px;
 		margin: 0;
-		padding: 0 5%;
+		padding: 0;
 		font-size: @fz-h3;
-		line-height: @lh-caption;
+		line-height: 29px;
 		font-weight: @fw-light;
 		color: @white;
 	}
