--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -4,12 +4,12 @@
 
   &__container {
     .clearfix();
-    padding: 8px 20px;
+    padding: 10px 20px 16px;
   }
 }
 
 .page-caption {
-    padding: 17px 5%;
+  padding: 17px 0;
   font-size: @fz-page-caption;
   font-weight: @fw-light;
   line-height: @lh-caption;
