--- a/less/base/scaffolding.less
+++ b/less/base/scaffolding.less
@@ -1,8 +1,8 @@
-* {
+.page-wrap * {
   box-sizing: border-box;
 }
-*:before,
-*:after {
+.page-wrap *:before,
+.page-wrap *:after {
   box-sizing: border-box;
 }
 
