--- a/less/base/type.less
+++ b/less/base/type.less
@@ -11,3 +11,8 @@ h3 { font-size: @fz-h3; }
 h4 { font-size: @fz-h4; }
 h5 { font-size: @fz-h5; }
 h6 { font-size: @fz-h6; }
+
+p {
+  margin: 0 0 (@lh-computed / 2);
+  letter-spacing: -0.0175em;
+}
