--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -9,10 +9,10 @@
 }
 
 .page-caption {
-  padding: 17px 0;
+  padding: 16px 0;
   font-size: @fz-page-caption;
   font-weight: @fw-light;
-  line-height: @lh-caption;
+  line-height: 28px;
   text-align: center;
 }
 
