--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
-@screen-md: 700px;
+@screen-sm: 700px;
+@screen-md: 992px;
 @screen-lg: 1200px;
 
 
@@ -44,6 +45,7 @@
 
 @lh-base: 1.714285714;
 @lh-caption: 1.125;
+@lh-computed: floor((@fz-base * @lh-base));
 
 
 
