--- a/less/blocks/features.less
+++ b/less/blocks/features.less
@@ -7,12 +7,14 @@
     display: block;
 
     p {
-        padding-bottom: 15px;
+        padding-bottom: 22px;
     }
   }
 
   &__caption {
+    display: block;
     font-size: @fz-large;
-    line-height: @lh-caption;
+    line-height: 21px;
+    padding-bottom: 13px;
   }
 }
