--- a/less/variables.less
+++ b/less/variables.less
@@ -9,6 +9,7 @@
 @white: #fff;
 @pink: #d22856;
 @grey: #f2f2f2;
+@silver: #bec2c7;
 
 
 // Scaffolding
@@ -43,8 +44,8 @@
 
 @fz-page-caption: ceil((@fz-base * 1.7));
 
-@lh-base: 1.714285714;
-@lh-caption: 1.125;
+@lh-base: 1.7142857;
+@lh-caption: 28px;
 @lh-computed: floor((@fz-base * @lh-base));
 
 
