--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -4,11 +4,7 @@
 
   &--shear {
     background: @grey;
-    margin-top: 80px;
-
-    .box__container {
-      margin-top: -31px;
-    }
+    margin-top: 107px;
   }
 
   &--shear:before {
@@ -18,7 +14,7 @@
     width: 110%;
     height: 130px;
     background: #f2f2f2;
-    transform: rotate(-4.5deg);
+    transform: rotate(-5.6deg);
     z-index: -1;
   }
 
@@ -29,7 +25,7 @@
     z-index: 0;
     height: 200px;
     width: 101%;
-    bottom: -120px;
+    bottom: -117px;
     background-image: linear-gradient(12deg, transparent 50%, @white 50%),linear-gradient(-12deg, transparent 50%, @white 50%);
     background-size: 50% 200px;
     background-repeat: no-repeat;
@@ -41,11 +37,8 @@
   }
 }
 
-@media (min-width: @screen-md) {
-  .box {
-
-    &--angle:after {
-      bottom: -60px;
-    }
+@media (min-width: 700px) {
+  .box--shear:before {
+    transform: rotate(-4.4deg);
   }
 }
