--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -4,7 +4,7 @@
 
   &__container {
     .clearfix();
-    padding: 10px 20px 16px;
+    padding: 16px 20px 20px;
   }
 }
 
@@ -16,7 +16,15 @@
   text-align: center;
 }
 
-@media (min-width: @screen-md) {
+@media (min-width: 700px) { 
   .page-caption {
-    font-size: 40px;
+    .text-font (40px, 48px, @fw-light);
+    padding: 0;
+  }
+}
+
+@media (min-width: 1100px) { 
+  .page-caption {
+    .text-font (50px, 60px, @fw-light);
+  }
 }
