--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -3,7 +3,10 @@
   text-align: center;
 
   &__author {
-
+    .small-caption; 
+    display: block;
+    font-style: normal;
+    padding-bottom: 13px;
   }
 
   &__text {
