--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -12,7 +12,7 @@
     position: absolute;
     top: -70px;
     width: 110%;
-    height: 130px;
+    height: 150px;
     background: #f2f2f2;
     transform: rotate(-5.6deg);
     z-index: -1;
@@ -40,5 +40,11 @@
 @media (min-width: 700px) {
   .box--shear:before {
     transform: rotate(-4.4deg);
+  }
+}
+
+@media (min-width: 1450px) {
+  .box--shear:before {
+    transform: rotate(-3.7deg);
   }
 }
