--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,42 @@ p {
     width: 41.66666667%;
   }
 }
+.col-sm-1 {
+  width: 8.33333333%;
+}
+.col-sm-2 {
+  width: 16.66666667%;
+}
+.col-sm-3 {
+  width: 25%;
+}
+.col-sm-4 {
+  width: 33.33333333%;
+}
+.col-sm-5 {
+  width: 41.66666667%;
+}
+.col-sm-6 {
+  width: 50%;
+}
+.col-sm-7 {
+  width: 58.33333333%;
+}
+.col-sm-8 {
+  width: 66.66666667%;
+}
+.col-sm-9 {
+  width: 75%;
+}
+.col-sm-10 {
+  width: 83.33333333%;
+}
+.col-sm-11 {
+  width: 91.66666667%;
+}
+.col-sm-12 {
+  width: 100%;
+}
 .col-md-1 {
   width: 8.33333333%;
 }
@@ -823,7 +859,7 @@ p {
   display: block;
 }
 .features__item p {
-  padding-bottom: 22px;
+  padding-bottom: 21px;
 }
 .features__caption {
   display: block;
