--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,56 +1,50 @@
 
 
-.page-footer__caption {
-  .big-caption();
-  padding-bottom: 7px;
-}
-.page-footer__contacts {
-  position: relative;
-  text-align: center;
-  z-index: 5;
-}
-.page-footer__list {
-  display: inline-block;
-  text-align: center;
-  margin-top: 5px;
 
-  dt {
-    .text-font(@fz-h4, ((@lh-caption) + 1), @fw-bold);
-  }
-  dd {
-    .big-caption;
-    margin-left: 0;
-    color: @pink;
-  }
-  &:last-child {
-    margin-top: 9px;
-  }
-}
+// .page-footer{
+//   position:relative;
+//   background-color:rgba(255,255,255,.9);
+//   z-index:10;
+//   padding:36px;
+// }
+// .page-footer__block--hash{
+//   font-size:21px;
+//   line-height:26px;
+//   font-weight:700;
+//   padding-top:10px;
+// }
+// .social__btns{
+//   display:inline-block;
+//     text-shadow:none;
+//     color:transparent;
+//     background:#81b3d2 url(../img/glukhanko.svg) no-repeat 0 0;
+//   width:46px;
+//   height:48px;
+//   margin-right:5px;
+// }
+// .social__btns--fb{ background-position:-414px -85px; }
+// .social__btns--youtube{ background-position:-451px -86px; }
 
-
-.page-footer__map {
-  height: 225px;
-  background: @grey url(../img/map.png) 50% 75% no-repeat;
-
-  // @media (min-width: @screen-md) {
-  //   height: 370px;
-  //   background: @grey url(../img/map.png) 50% 100% no-repeat;
-}
-
-
-@media (min-width: 700px) {
-  .page-footer__caption {
-    .text-font (40px, 48px, @fw-light);
-  }
-  .page-footer__map {
-    height: 370px;
-    background: @grey url(../img/map.png) 50% 100% no-repeat;
-  }
-}
-
-@media (min-width: 1100px) { 
-  .page-footer__caption {
-    .text-font (50px, 60px, @fw-light);
-  }
-}
-
+// .socials__copyright{
+//   line-height:1.857; /* 26px / 14px */
+//   padding-top:10px;
+// }
+// .socials__copyright a{
+//   position: relative;
+//   font:0/0 a;
+//     text-shadow:none;
+//     color:transparent;
+// }
+// .socials__copyright span{
+//   margin-left:48px;
+// }
+// .socials__copyright:after{
+//   content:'';
+//   display:table;
+//   position:absolute;
+//   left:10px;
+//   top:-20px;
+//   width:27px;
+//   height:33px;
+//   background:url(../img/glukhanko.svg) no-repeat 0 0px;
+// }
