--- a/less/style.less
+++ b/less/style.less
@@ -1,11 +1,17 @@
-
 // Reset 
 @import 'vendors/normalize.less';
 
 
 // Variables and mixins
+@import 'vendors/grid-framework.less'; // bs
+@import 'vendors/grid.less'; // bs
+@import 'vendors/clearfix.less'; // bs
+@import 'vendors/responsive-visibility.less'; // bs
+@import 'vendors/responsive-utilities.less'; // bs
+@import 'vendors/variables.less'; // bs
 @import 'variables.less';
-@import "mixins.less";
+@import 'grid.less';
+@import 'mixins.less';
 
 
 // CSS
@@ -25,3 +31,4 @@
 @import 'blocks/price-table.less';
 @import 'blocks/features.less';
 @import 'blocks/reviews.less';
+@import 'blocks/contacts.less';
