--- a/less/base/layout.less
+++ b/less/base/layout.less
@@ -1,22 +1,21 @@
-// Grid
-.generate-width(@n: 1, @size: xs, @i: 12) {
+// .generate-width(@n: 1, @size: xs, @i: 12) {
 
-  & when ( @size = xs ) {
-    width: (@n * 100% / @i);
-  }
+//   & when ( @size = xs ) {
+//     width: (@n * 100% / @i);
+//   }
 
-  & when ( @size = sm ) {
-    @media (min-width: @screen-md) {
-      width: (@n * 100% / @i);
-    }
-  }
+//   & when ( @size = sm ) {
+//     @media (min-width: @screen-md) {
+//       width: (@n * 100% / @i);
+//     }
+//   }
 
-  & when ( @size = lg ) {
-    @media (min-width: @screen-lg) {
-      width: (@n * 100% / @i);
-    }
-  }
-}
+//   & when ( @size = lg ) {
+//     @media (min-width: @screen-lg) {
+//       width: (@n * 100% / @i);
+//     }
+//   }
+// }
 
 
 
@@ -26,8 +25,6 @@
   height: 100%;
 }
 .page-header {
-  //display: table-row;
-  //height: 1px;
   position: fixed;
   top: 0;
   left: 0;
@@ -38,66 +35,55 @@
   display:table-row;
   height: 1px;
 }
-
-
-.page-header__nav-wrap {
-  .generate-width(6, xs, 12);
-  .generate-width(9, sm, 12);
+// .page-header__nav-wrap {
+//   .generate-width(6, xs, 12);
+//   .generate-width(9, sm, 12);
   
-  float: right;
-  text-align: right;
-}
-
-.logo {
-  .generate-width(6, xs, 12);
-  .generate-width(3, sm, 12);
-}
-
-
-
-.features {
-  .generate-width(6, sm, 12);
-}
-
-
-
-.page-footer__contacts {
-  .generate-width(12, xs, 12);
-}
-
-.page-footer__map {
-  .generate-width(12, xs, 12);
-}
-
-.page-footer__list {
-  .generate-width(12, xs, 12);
-  .generate-width(5, sm, 12);
-}
+//   float: right;
+//   text-align: right;
+// }
+// .logo {
+//   .generate-width(6, xs, 12);
+//   .generate-width(3, sm, 12);
+// }
+// .features {
+//   .generate-width(6, sm, 12);
+// }
+// .page-footer__contacts {
+//   .generate-width(12, xs, 12);
+// }
+// .page-footer__map {
+//   .generate-width(12, xs, 12);
+// }
+// .page-footer__list {
+//   .generate-width(12, xs, 12);
+//   .generate-width(5, sm, 12);
+// }
 
 
 
 // Modal Grid
 
-.generate-sm-cols(@n, @i: 1) when (@i =< @n) {
-  .col-sm-@{i} {
-    width: (@i * 100% / @n);
-  }
-  .generate-sm-cols(@n, (@i + 1));
-}
-.generate-md-cols(@n, @i: 1) when (@i =< @n) {
-  .col-md-@{i} {
-    width: (@i * 100% / @n);
-  }
-  .generate-md-cols(@n, (@i + 1));
-}
+// .generate-xs-cols(@n, @i: 1) when (@i =< @n) {
+//   .col-xs-@{i} {
+//     width: (@i * 100% / @n);
+//   }
+//   .generate-xs-cols(@n, (@i + 1));
+// }
+// .generate-md-cols(@n, @i: 1) when (@i =< @n) {
+//   .col-md-@{i} {
+//     width: (@i * 100% / @n);
+//   }
+//   .generate-md-cols(@n, (@i + 1));
+// }
 
-.generate-lg-cols(@n, @i: 1) when (@i =< @n) {
-  .col-lg-@{i} {
-    width: (@i * 100% / @n);
-  }
-  .generate-lg-cols(@n, (@i + 1));
-}
+// .generate-lg-cols(@n, @i: 1) when (@i =< @n) {
+//   .col-lg-@{i} {
+//     width: (@i * 100% / @n);
+//   }
+//   .generate-lg-cols(@n, (@i + 1));
+// }
 
-.generate-sm-cols(12);
-.generate-md-cols(12);
-.generate-lg-cols(12);
+// .generate-xs-cols(12);
+// .generate-md-cols(12);
+// .generate-lg-cols(12);
